# game-setting-manager

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  pytest.ini
.direnv/: flake-profile-1-link
.github/workflows/: ci.yml
src/: save_and_load.py
src/game_setting_manager/: gsm_cli.py  save_and_load.py
testing/example_game_1/: config_file_1  shared_file
testing/example_game_2/: example_file_2  shared_file
tests/: create_test_env.py  test_load.py  test_save.py  test_save_and_load.py  testing_tools.py  unittest.py
tests/dynamic_testing_data/example_game_2/config_folder_2/: config_file_2
tests/dynamic_testing_data/testing_data/game_paths/: game_1.json
tests/static_testing_data/example_game_1/config_folder_1/: config_file_1
tests/static_testing_data/example_game_1/example_folder_1/: example_file_1
tests/testing_data/example_game_1/: config_file_1  example_file_1
tests/testing_data/example_game_2/example_folder_2/: example_file_2
