[tool.poetry]
name = "game-setting-saver"
version = "0.1.0"
description = ""
authors = ["Roman Bezroutchko <rbezroutchko@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
